--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -155,6 +155,13 @@ color: #999999;
     left: 200px;
     bottom: 10px;
 }
+.live-null-tip{
+	font-size: 18px;
+    color: #FF4012;
+    display: inline-block;
+    padding-top: 30px;
+}
+	
 /*详情/评价/常见问题*/
 /*选集*/
 .wrap-anthology{
