--- a/wechat/src/main/webapp/xcview/css/buy_prosperity.css
+++ b/wechat/src/main/webapp/xcview/css/buy_prosperity.css
@@ -131,16 +131,20 @@ span,p{
 }
 .purchase_details_title .span0{
 	color: #999;
-	font-size: 0.22rem;
+    font-size: 0.22rem;
+    margin-top: 0.1rem;
+    display: inline-block;
 }
 .purchase_details_money{
 	font-size: 0.28rem;
 	color: #333333;
 }
 .purchase_details_money .span{
-
 	color: #F97B49;
-	font-size: 0.36rem;
+    font-size: 0.36rem;
+    margin-top: -0.05rem;
+    display: inherit;
+    float: left;
 }
 .prosperity_play{
 	width: 1.44rem;
