--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1,6 +1,8 @@
 *{
 	margin: 0;
 	padding: 0;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+-webkit-tap-highlight-color: transparent; 
 }
 img{
 	border: none;
@@ -3009,3 +3011,14 @@ margin-top: 0.015rem;
 	    background: #F8F8F8; */
     /*background: red;*/
 }
+
+.itransforms{
+	/*-webkit-tap-highlight-color:rgba(0,0,0,0);*/
+}
+.am-gallery-item .transform_a_img{
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+/* 
+.am-gallery-item .transform_a_img img{
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
+} */
