--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -608,6 +608,43 @@ outline: none;
 .save-photo-wrap li:nth-child(3n){
 	margin-right: 0;
 }
+.save-photo-wrap li:hover{
+	cursor: url(/web/images/big.cur),auto;
+}
+.wrap-photo-see{
+	position: fixed;
+	width: 1000px;
+	margin: 0 auto;
+	/*height: 500px;*/
+	left: 50%;
+	top: 50%;
+	background: #000;
+	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	z-index: 99999;
+	overflow-y: auto;
+	padding-top: 100px;
+}
+  /*滚动条样式*/
+.wrap-photo-see::-webkit-scrollbar {/*滚动条整体样式*/
+    width: 8px;     /*高宽分别对应横竖滚动条的尺寸*/
+    height: 4px;
+}
+.wrap-photo-see::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 5px #504f4f;
+    background: #504f4f;
+}
+.wrap-photo-see::-webkit-scrollbar-track {/*滚动条里面轨道*/
+    -webkit-box-shadow: inset 0 0 5px rgba(146, 146, 146, 0.9);
+    border-radius: 0;
+    background: rgba(146, 146, 146, 0.9);
+}
+.wrap-photo-see img{
+	display: block;
+	margin: 0 auto;
+	max-width: 800px;
+}
 /*医案/文章*/
 .save-consilia-wrap{
 	width: 920px;
