[bug fix]修复文档切换，与图片拉伸问题

--- a/online-web/src/main/webapp/web/css/live-room/live-room.css
+++ b/online-web/src/main/webapp/web/css/live-room/live-room.css
@@ -394,6 +394,9 @@ input::-webkit-input-placeholder{
 .video-main .icon-left:hover{
 	background-color: #282828 !important;
 }
+.document-content img {
+	width: auto!important;
+}
 .select-document-wrap .modal-list{
 	padding-top: 1px;
 	overflow-y: auto;
