图片超出隐藏师承直播

--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1538,6 +1538,7 @@ outline: none;
     vertical-align: middle;
     position: relative;
     background: #f0f0f0;
+    overflow: hidden;
 }
 .class-fengmian{
 	width: 603px;
