--- a/online-web/src/main/webapp/web/css/anchor/account.css
+++ b/online-web/src/main/webapp/web/css/anchor/account.css
@@ -306,6 +306,18 @@
 	width: 260px !important;
 	height: 147px !important;
 }
+.certification .input-group .big-photo .preview p{
+	position: absolute;
+    z-index: 666;
+    background: rgba(0,0,0,.4);
+    padding: 20px 0;
+    color: white;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    width: 100%;
+}
 .certification .input-group .big-photo input{
 	display: block !important;
 	width: 262px;
