pc--直播间-微信网页版，分享图片兼容处理。h5弟子判断测试，直播间-聊天记录修改、发现--图片误删后的还原

--- a/wechat/src/main/webapp/xcview/css/details_style.css
+++ b/wechat/src/main/webapp/xcview/css/details_style.css
@@ -480,7 +480,7 @@ div.pinch-zoom,
     float: left;
     color: #666;
     font-size: 0.28rem;
-    margin-left: 0.2rem;
+    /*margin-left: 0.2rem;*/
 }
 .coze_cen_bg_ri{
     position: relative;
