--- a/online-web/src/main/webapp/web/css/anchor/curriculum.css
+++ b/online-web/src/main/webapp/web/css/anchor/curriculum.css
@@ -1964,7 +1964,7 @@ height: 60px;
 #zhuanji_bottom .textarea .span {
     height: 160px;
     float: left;
-    line-height: 160px !important;
+    /*line-height: 160px !important;*/
 }
 #zhuanji_bottom .select select {
     width: 280px;
@@ -2273,6 +2273,9 @@ height: 60px;
 
 /*第二页*/
 /*第二页*/
+#zhuanji .active-border{
+	border-color: #FF4012 !important;
+}
 #zhuanji .zhuanlan_bottoms{
 	width: 100%;
 	height: 100%;
