课程详情专辑添加购买提示

--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -838,4 +838,10 @@ word-break:break-all;
 	font-size: 14px;
     
 }
-   
+.contain-album{
+	font-size: 14px;
+	margin: 7px 0;
+}
+.contain-album a{
+	color: #00bc12;
+}	
