--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -157,7 +157,7 @@ color: #999999;
 }
 .live-null-tip{
 	font-size: 18px;
-    color: #FF4012;
+    color: #F97B49;
     display: inline-block;
     padding-top: 30px;
 }
