--- a/online-web/src/main/webapp/web/css/anchor/account.css
+++ b/online-web/src/main/webapp/web/css/anchor/account.css
@@ -65,7 +65,7 @@
 	text-align: right;
 	float: left;	
 	margin-right: 20px;
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 	font-size: 14px;
 	color: #666666;
 }
