--- a/wechat/src/main/webapp/xcview/css/physician/reserve_information.css
+++ b/wechat/src/main/webapp/xcview/css/physician/reserve_information.css
@@ -176,16 +176,64 @@ header{
     color: #FFFFFF;
     text-align: center;
     margin: 0 auto;
-    margin-bottom: 0.22rem;
+    margin-bottom: 0.3rem;
 }
+
+
+.other_means {
+    width: 4.35rem;
+    height: 0.4rem;
+    line-height: 0.4rem;
+    margin: 0 auto;
+    /* text-align: center; */
+    margin-bottom: 0.6rem;
+    font-size: 0.24rem;
+    color: #333333;
+}
+.other_means_ru {
+    width: 0.32rem;
+    height: 0.32rem;
+    line-height: 0.24rem;
+    color: #fff;
+    /* background: #00BC12; */
+    border-radius: 60px;
+    text-align: center;
+    float: left;
+    margin-top: 0.04rem;
+    margin-right: 0.13rem;
+    background: url(/xcview/images/agree.png) no-repeat;
+    background-size: 100% 100%;
+}
+.other_means_ru input{
+    width: 0.32rem;
+    height: 0.32rem;
+    opacity: 0;
+}
+
+.other_means span {
+    font-size: 0.22rem;
+    color: #00bc12;
+}
+
+
+
 .handler_reminder{
     width: 6.98rem;
     margin: 0 auto;
     font-size: 0.26rem;
     color: #999999;
+    margin-top: 1.09rem;
+    position: fixed;
+    bottom: 0.6rem;
+    left: 50%;
+    margin-left: -3.49rem;
+}
+.handler_reminder ul li{
+    list-style: disc;
+    margin-left: 0.4rem;
 }
 .handler_reminder span{
-    display: block;
+    /*display: block;*/
 }
 /*中间内容结束*/
 
