修改--购买成功返回学堂，专辑大纲图片修改。医师简介--图片修改

--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1931,6 +1931,9 @@ p{
 .self_introduction_cen p img{
 	max-width: 6.98rem;
 	margin: 0 auto;
+	display: list-item;
+    margin-bottom: 0.2rem;
+    margin-top: 0.2rem;
 }
 table {
 	border: 0;
