--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -2652,7 +2652,7 @@ white-space: normal;
 .contentWrap #zhuanlan .zhuanlan_bottom .fengmian_pic img,
 .contentWrap #zhuzuo .zhuzuo_bottom  .fengmian_pic img,
 .contentWrap #media_report .media_report_bottom  .fengmian_pic img{
-	/*position: absolute;
+	position: absolute;
     max-width: 100%;
     max-height: 100%;
     width: auto;
@@ -2661,9 +2661,7 @@ white-space: normal;
     left: 0;
     bottom: 0;
     right: 0;
-    margin: auto;*/
-   width: 100%;
-   height: 100%;
+    margin: auto;
 }
 .contentWrap #zhuanlan .zhuanlan_bottom .fengmian_tip,
 .contentWrap #zhuzuo .zhuzuo_bottom .fengmian_tip,
@@ -2817,8 +2815,18 @@ white-space: normal;
 	height: 60px;
 }
 .contentWrap #zhuzuo .zhuzuo_bottom2 table tbody > tr > td:first-child img{
-	width: 66px;
-	height: 92px;
+	/*width: 66px;
+	height: 92px;*/
+	    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
 }
 .contentWrap #zhuanlan .zhuanlan_bottom2 table thead > tr > td:nth-child(2),
 .contentWrap #zhuanlan .zhuanlan_bottom2 table tbody > tr > td:nth-child(2),
@@ -2897,6 +2905,28 @@ white-space: normal;
 }
 .contentWrap #zhuanlan .zhuanlan_bottom2 table thead > tr > td:nth-child(6){
 	width: 136px;
+}
+#work-table .work-img-wrap{
+	 position: relative;
+    width: 104px;
+    height: 60px;
+}
+.preview-work-picter img{
+	position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    /*margin: 0 auto;*/
+}
+.preview-work-picter .wrap-work-in{
+	    width: 120px;
+    height: 120px;
+    position: relative;
 }
 /*专栏类型*/
 .column-btn-box{
@@ -3752,7 +3782,7 @@ white-space: normal;
 	-webkit-transform: translate(-50%,-50%);
 	background: #fff;
 	width: 960px;
-	height: 772px;
+	height: 500px;
 	padding-bottom: 90px;
 	box-sizing: border-box;
 	z-index: 999;
@@ -3786,6 +3816,10 @@ white-space: normal;
 	display: inline-block;
 	color: red;
 }
+#preview .preview_bottom .preview-column-content p{
+	max-width: 600px;
+	word-wrap: break-word;
+}
 #preview .preview_bottom {
 	padding-top: 20px;
 	padding-bottom: 90px;
@@ -3793,7 +3827,7 @@ white-space: normal;
 	    overflow-x: hidden;
     overflow-y: auto;
     width: 960px;
-    height: 712px;
+    height: 440px;
     box-sizing: border-box;
 	
 }
@@ -3843,7 +3877,8 @@ white-space: normal;
 	padding: 20px 0;
 	vertical-align: top;
 }
-.work-preview-table tr td img{
+
+.work-preview-table tr:nth-child(4) td img{
 	max-width: 400px;
 	/*max-height: 200px;*/
 }
