--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1066,6 +1066,15 @@ outline: none;
 .long-range-table {
 	padding: 20px;
 }
+.long-range-table .long-range-tip{
+	font-size: 14px;
+	color: #999999;
+	margin-bottom: 20px;
+}
+.long-range-table .long-range-tip span{
+	color: #00bc12;
+	cursor: pointer;
+}
 .long-range-table table{
 	width: 100%;
     border: 1px solid #f0f0f0;
@@ -1111,14 +1120,13 @@ outline: none;
 .long-range-table table td span{
 	color: #188EEE;
 	cursor: pointer;
+	margin-right: 5px;
 }
 .long-range-table table td span:nth-child(1){
 	/*margin-left: 30px;
 	float: left;*/
 }
-.star-inf-medical{
-	margin: 0 7px
-}
+
 .long-range-question{
 	width: 100%;
     overflow: hidden;
