我是医师，轮播图设置

--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1558,6 +1558,7 @@ outline: none;
 }
 .class-fengmian{
 	width: 603px;
+	margin-bottom: 20px;
 }
 .disciple-wrap-img .teacher-reset-tip{
 	    position: absolute;
