添加视频跳转--我的预约，详情

--- a/wechat/src/main/webapp/xcview/css/physician/my_bookings.css
+++ b/wechat/src/main/webapp/xcview/css/physician/my_bookings.css
@@ -382,7 +382,7 @@ header{
     width: 6.98rem;
     height: 0.72rem;
     line-height: 0.72rem;
-    background: #ccc;
+    /*background: #ccc;*/
     border-radius: 100px;
     font-size: 0.3rem;
     color: #FFFFFF;
