我是医师统一规范

--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1605,7 +1605,9 @@ outline: none;
     float: right;
     margin-top: 37px;
 }
-
+.active-border{
+	border-color: #FF4012 !important;
+}
 .comment-style .introduce-text{
 	width: 540px;
 	height: 160px;
