--- a/online-web/src/main/webapp/web/css/ResidentDoctor.css
+++ b/online-web/src/main/webapp/web/css/ResidentDoctor.css
@@ -398,4 +398,14 @@ a {
     border: none;
     margin: 0 20px;
 }
-
+.img-agin-tip{
+	position: absolute;
+	text-align: center;
+	background: rgba(0,0,0,.4);
+	color: white;
+	  height: 50px;
+    bottom: 0;
+    width: 100%;
+    line-height: 50px;
+    font-size: 16px;
+}
