需求变更添加：点击远程诊疗列表头像昵称区域跳转详情，预告，下载app

--- a/wechat/src/main/webapp/xcview/css/treatment.css
+++ b/wechat/src/main/webapp/xcview/css/treatment.css
@@ -139,6 +139,11 @@ header {
 	width: 100%;
 	height: .9rem;
 }
+.subject_float{
+    width: 5rem;
+    height: .9rem;
+    float: left;
+}
 .head_portrait{
 	width: .9rem;
 	height: .9rem;
