--- a/wechat/src/main/webapp/xcview/css/treatment_details.css
+++ b/wechat/src/main/webapp/xcview/css/treatment_details.css
@@ -416,6 +416,20 @@ header{
     margin: 0 auto;
     margin-top: 0.29rem;
 }
+.determines{
+    width: 6.98rem;
+    height: 0.72rem;
+    line-height: 0.72rem;
+    background: #00bc12;
+    border-radius: 100px;
+    font-size: 0.3rem;
+    color: #FFFFFF;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 0.29rem;
+}
+
+
 
 /*点击开始诊疗弹框*/
 .tooltip {
