--- a/online-web/src/main/webapp/web/css/want-anchor.css
+++ b/online-web/src/main/webapp/web/css/want-anchor.css
@@ -13,6 +13,18 @@ p{margin-bottom: 0;}
 .z{float: left;}
 .y{float: right;}
 .wp{width: 1200px; margin: 0 auto; color: #333333;}
+#tip{
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	padding: 18px 20px;
+	color: white;
+	background: rgba(0,0,0,.4);
+	border-radius: 8px;	
+	display: none;
+}
 .wrap-bg{
 	background: #ECF6ED;
     display: flex;
